--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@emotion/sheet": "^1.2.0",
     "@emotion/styled": "^11.10.4",
     "@mapbox/mapbox-gl-draw": "^1.3.0",
-    "@mui/icons-material": "^5.10.3",
+    "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.97",
     "@mui/material": "^5.10.3",
     "@mui/x-data-grid": "^5.17.2",
@@ -34,10 +34,11 @@
     "@types/react-sparklines": "^1.7.2",
     "@types/styled-components": "^5.1.26",
     "apexcharts": "^3.35.5",
-    "axios": "^0.27.2",
+    "axios": "^1.3.4",
     "chart.js": "^2.9.4",
     "formik": "^2.2.9",
     "framer-motion": "^7.3.5",
+    "google-map-react": "^2.2.0",
     "mapbox-gl": "^2.10.0",
     "material-ui-popup-state": "^4.0.2",
     "moment": "^2.29.4",
@@ -47,6 +48,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^2.11.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
     "react-map-gl": "^7.0.19",
@@ -55,9 +57,12 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-places-autocomplete": "^7.3.0",
     "react-sparklines": "^1.7.0",
+    "recharts": "^2.5.0",
     "sass": "^1.54.9",
     "styled-components": "^5.3.5",
     "styled-jsx-plugin-postcss": "^4.0.1",
+    "swr": "^2.1.2",
+    "use-hooks": "^2.0.0-rc.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
